[SP-1] Initial OSP customization

--- a/packages/api/app-production.yaml
+++ b/packages/api/app-production.yaml
@@ -3,8 +3,10 @@ service: api
 runtime: nodejs16
 instance_class: B4_1G
 basic_scaling:
-  max_instances: 20
+  max_instances: 10
   idle_timeout: 30m
 
 entrypoint: npm run start:webprod
 
+
+service_account: ccf-app@ogcs-btqm-osphub.iam.gserviceaccount.com
