--- a/packages/api/app-staging.yaml
+++ b/packages/api/app-staging.yaml
@@ -3,10 +3,12 @@ service: api-staging
 runtime: nodejs12
 instance_class: B4_1G
 basic_scaling:
-  max_instances: 20
+  max_instances: 10
   idle_timeout: 30m
 
 entrypoint: npm run start:webprod
 
 env_variables:
   CCF_CACHE_PATH: estimates.cache.json
+
+service_account: ccf-app@ogcs-btqm-osphub.iam.gserviceaccount.com
