--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -304,7 +304,7 @@ jobs:
           cd ..
   deploy-production:
     if: github.ref == 'refs/heads/trunk' && github.event.inputs.job == 'true'
-    needs: build
+    needs: deploy-staging
     runs-on: ubuntu-latest
     container:
       image: node:14.18-alpine3.14
