--- a/appengine/dispatch.yaml
+++ b/appengine/dispatch.yaml
@@ -1,8 +1,8 @@
 dispatch:
-  - url: "staging.ogcs-btqm-osphub.ey.r.appspot.com/api/*"
+  - url: "staging-ogcs-btqm-osphub.ey.r.appspot.com/api/*"
     service: api-staging
 
-  - url: "staging.ogcs-btqm-osphub.ey.r.appspot.com/*"
+  - url: "staging-ogcs-btqm-osphub.ey.r.appspot.com/*"
     service: client-staging
 
   - url: "ogcs-btqm-osphub.ey.r.appspot.com/api/*"
