--- a/packages/client/.env.template
+++ b/packages/client/.env.template
@@ -21,4 +21,4 @@ REACT_APP_DISABLE_CACHE=true
 
 # MongoDB config
 # When using MongoDB as cache, large results will be paginated and split into multiple requests. Use this to set a limit for results per page/request.
-PAGE_LIMIT=30
+REACT_APP_PAGE_LIMIT=30
