--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,8 @@ jobs:
           REACT_APP_PREVIOUS_YEAR_OF_USAGE: ${{ secrets.REACT_APP_PREVIOUS_YEAR_OF_USAGE }}
           REACT_APP_GROUP_BY: ${{ secrets.REACT_APP_GROUP_BY }}
           REACT_APP_MINIMAL_DATE_AGE: ${{ secrets.REACT_APP_MINIMAL_DATE_AGE }}
+          REACT_APP_DISABLE_CACHE: ${{ secrets.REACT_APP_DISABLE_CACHE }}
+          REACT_APP_PAGE_LIMIT: ${{ secrets.REACT_APP_PAGE_LIMIT }}
         run: |
           cd packages/client
           ./create_client_env_file.sh
