--- a/.github/workflows/demo-app.yml
+++ b/.github/workflows/demo-app.yml
@@ -40,6 +40,8 @@ jobs:
           REACT_APP_GROUP_BY: ${{ secrets.REACT_APP_GROUP_BY }}
           REACT_APP_MINIMAL_DATE_AGE: ${{ secrets.REACT_APP_MINIMAL_DATE_AGE }}
           REACT_APP_DISABLE_FORECAST_VALIDATION: ${{ secrets.REACT_APP_DISABLE_FORECAST_VALIDATION }}
+          REACT_APP_DISABLE_CACHE: ${{ secrets.REACT_APP_DISABLE_CACHE }}
+          REACT_APP_PAGE_LIMIT: ${{ secrets.REACT_APP_PAGE_LIMIT }}
         run: |
           cd packages/client
           ./create_client_env_file.sh
