--- a/packages/api/app-production.yaml
+++ b/packages/api/app-production.yaml
@@ -9,4 +9,4 @@ basic_scaling:
 entrypoint: npm run start:webprod
 
 
-service_account: ccf-app@ogcs-btqm-osphub.iam.gserviceaccount.com
+service_account: ccf-app-prod@ogcs-btqm-osphub.iam.gserviceaccount.com
