--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,7 +303,13 @@ jobs:
           cd dist-workspace/packages/api
           # Generate yarn.lock file
           yarn install
+          echo "yarn installation finished..."
+          echo "DEBUG: cat ./create_server_env_file.sh"
+          cat ./create_server_env_file.sh
+          echo "DEBUG: cat ./create_server_env_file.sh finished..."
+          echo "start ./create_server_env_file.sh ..."          
           ./create_server_env_file.sh
+          echo "./create_server_env_file.sh finished..."
           cd ../../..
 
           # Store service account
