--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -291,6 +291,7 @@ jobs:
 
           cp packages/client/app-staging.yaml dist-workspace/packages/client
 
+          echo "start yarn installation..."
           # We need to set yarn to v1 because App Engine will only install with a yarn.lock file generated from this version.
           yarn set version 1.22.4
 
@@ -300,7 +301,13 @@ jobs:
           cd dist-workspace/packages/api
           # Generate yarn.lock file
           yarn install
+          echo "yarn installation finished..."
+          echo "DEBUG: cat ./create_server_env_file.sh"
+          cat ./create_server_env_file.sh
+          echo "DEBUG: cat ./create_server_env_file.sh finished..."
+          echo "start ./create_server_env_file.sh ..."          
           ./create_server_env_file.sh
+          echo "./create_server_env_file.sh finished..."
           cd ../../..
 
           # Store service account
