--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   workflow_dispatch:
     inputs:
-      job:
+      deploy_production:
         description: 'Deploy prod?'
         required: true
         default: 'false'
@@ -234,9 +234,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container:
-      image: node:14.18-alpine3.13
+      image: node:16.19-alpine3.17
     environment:
-      name: production
+      name: staging
     env:
       AWS_PROXY_ACCOUNT_ID: ${{ secrets.AWS_PROXY_ACCOUNT_ID }}
       AWS_PROXY_ROLE_NAME: ${{ secrets.AWS_PROXY_ROLE_NAME }}
@@ -317,7 +317,7 @@ jobs:
           ./deploy-staging.sh
           cd ..
   deploy-production:
-    if: github.ref == 'refs/heads/trunk' && github.event.inputs.job == 'true'
+    if: github.ref == 'refs/heads/trunk' && github.event.inputs.deploy_production == 'true'
     needs: deploy-staging
     runs-on: ubuntu-latest
     container:
